# bifrost

./: .env.example  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
assets/: assumption.json  basic.json  full-nodb.json  mini.json
dump/: README.md
src/: config.rs  log.rs  main.rs
src/http/: client.rs  mod.rs
src/http/openai/: banner.rs  intruder.rs  invoke.rs  mod.rs  ports.rs  requests.rs
src/toolkit/: mod.rs
src/toolkit/commander/: child.rs  mod.rs
src/toolkit/commands/: loop_main.rs  mod.rs
src/toolkit/portscan/: banner.rs  mod.rs  port_loader.rs  sweeper.rs
src/toolkit/prompter/: assumption.rs  mod.rs
