[package]
name = "pnu"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = {version = "0.28.1", features = ["event-stream"]} 
reqwest = {version = "0.12.5", features = ["rustls-tls", "json"]}
tracing = "0.1.40"
mini-config = {version="0.1.3", features=["derive"]}
serde = { version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
dotenv = "0.15.0"
tokio = {version="1.39.2", features = ["full"]}
futures = "0.3.29"
